<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/background"
              android:gravity="center"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:orientation="vertical"
              android:paddingLeft="20dip"
              android:paddingRight="20dip"
			  android:paddingTop="30dip">
	<Button
		android:background="@drawable/phone_button"
		android:id="@+id/phone_button"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:layout_width="wrap_content"
		android:text="@string/phone"
		android:textColor="@color/default_button"
		android:textSize="25dip"
	/>
	<Button
		android:background="@drawable/sms_button"
		android:id="@+id/sms_button"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:layout_width="wrap_content"
		android:text="@string/sms"
		android:textColor="@color/default_button"
		android:textSize="25dip"
	/>
	<Button
		android:background="@drawable/mail_button"
		android:id="@+id/mail_button"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:layout_width="wrap_content"
		android:text="@string/email"
		android:textColor="@color/default_button"
		android:textSize="25dip"
	/>
	<Button
		android:background="@drawable/whatsapp_button"
		android:id="@+id/whatsapp_button"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:layout_width="wrap_content"
		android:text="@string/whatsapp"
		android:textColor="@color/default_button"
		android:textSize="25dip"
	/>
</LinearLayout>