<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@drawable/background"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:paddingBottom="25dip"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:paddingTop="80dip"
                android:orientation="vertical">
	<TextView
		android:id="@+id/destination"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/destination"
		android:textColor="#9ef0ff"
		android:textSize="35dip"
	/>
	<fragment xmlns:map="http://schemas.android.com/apk/res-auto"
		android:id="@+id/destination_map"
	    android:gravity="center_horizontal"
	    android:layout_below="@id/destination"
	    android:layout_centerHorizontal="true"
	    android:layout_height="260dip"
	    android:layout_width="fill_parent"
	    android:name="com.google.android.gms.maps.SupportMapFragment"
	    map:cameraZoom="18"
	    map:mapType="normal"
	    map:uiCompass="false"
	    map:uiZoomControls="false"
	    map:useViewLifecycle="true"
	/>
	<Button
		android:background="@drawable/default_button"
		android:id="@+id/notify_button"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:layout_width="wrap_content"
		android:text="@string/notify_button"
		android:textColor="@color/default_button"
		android:textSize="25dip"
	/>
	<Button
		android:background="@drawable/default_button"
		android:id="@+id/google_button"
		android:layout_above="@id/notify_button"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:layout_width="wrap_content"
		android:text="@string/google_maps_button"
		android:textColor="@color/default_button"
		android:textSize="25dip"
	/>
	<Button
		android:background="@drawable/destination_button"
		android:id="@+id/destination_button"
		android:layout_above="@id/google_button"
		android:layout_centerHorizontal="true"
		android:layout_height="wrap_content"		android:layout_margin="8dip"
		android:layout_width="wrap_content"
		android:text="@string/set_destination"
		android:textColor="@color/destination_button"
		android:textSize="20dip"
	/>
</RelativeLayout>